--- a/views/administrador/profile.jade
+++ b/views/administrador/profile.jade
@@ -1,24 +1,6 @@
 extends ../layout
 block content
-    .navbar.navbar-inverse
-        .container
-            .navbar-header
-                a(class="navbar-brand", href="#") Sistema EspSoft
-                button(class="navbar-toggle", type="button", data-toggle="collapse", data-target="#navbar-main")
-                    span.icon-bar
-                    span.icon-bar
-                    span.icon-bar
-            .navbar-collapse.collapse.navbar-responsive-collapse
-                ul.nav.navbar-nav
-                    li.active
-                        a(href="#") Postgrados
-                    li
-                        a(href="#") UFPS
-                ul.nav.navbar-nav.navbar-right
-                    li
-                        a(href="/logoutAdmin")
-                            i.fa.fa-power-off
-                            | &nbsp; Cerrar Sesion
+    include ../adminHead
     .row
         .container
             .col-sm-8
