--- a/views/preinscripcion/index.jade
+++ b/views/preinscripcion/index.jade
@@ -1,24 +1,6 @@
 extends ../layout
 block content
-    .navbar.navbar-inverse.navbar
-        .container
-            .navbar-header
-                a(class="navbar-brand", href="#") Sistema EspSoft
-                button(class="navbar-toggle", type="button", data-toggle="collapse", data-target="#navbar-main")
-                    span.icon-bar
-                    span.icon-bar
-                    span.icon-bar
-            .navbar-collapse.collapse.navbar-responsive-collapse
-                ul.nav.navbar-nav
-                    li.active
-                        a(href="#") Postgrados
-                    li
-                        a(href="#") UFPS
-                ul.nav.navbar-nav.navbar-right
-                    li
-                        a(href="/logout")
-                            i.fa.fa-power-off
-                            | &nbsp; Cerrar Sesion
+    include ../directorHead
     .container
         ul.breadcrumb
             li: a(href="/director/profile") Inicio
@@ -98,7 +80,7 @@ block content
                                     p.text-muted direccion de correo electronico de contacto de la persona
                             legend
                             textarea(name="comentario", reqired, id="comentario", class="comentario").form-control
-                            script(type="text/javascript")
+                            script(type="text/javascript").
                                 $('.comentario').jqte();
                             legend
                             .form-group
