--- a/views/estudiante/show.jade
+++ b/views/estudiante/show.jade
@@ -1,24 +1,6 @@
 extends ../layout
 block content
-    .navbar.navbar-inverse.navbar
-        .container
-            .navbar-header
-                a(class="navbar-brand", href="#") Sistema EspSoft
-                button(class="navbar-toggle", type="button", data-toggle="collapse", data-target="#navbar-main")
-                    span.icon-bar
-                    span.icon-bar
-                    span.icon-bar
-            .navbar-collapse.collapse.navbar-responsive-collapse
-                ul.nav.navbar-nav
-                    li.active
-                        a(href="#") Postgrados
-                    li
-                        a(href="#") UFPS
-                ul.nav.navbar-nav.navbar-right
-                    li
-                        a(href="/logout")
-                            i.fa.fa-power-off
-                            | &nbsp; Cerrar Sesion
+    include ../directorHead
     .container
         ul.breadcrumb
             li: a(href="/director/profile") Inicio
@@ -30,10 +12,15 @@ block content
             .margin-auto
                 p.lead.text-center
                     strong Informacion del Estudiante
+                    br
                     span.text-primary &nbsp; #{postgrado.nombre} -
                     strong.text-primary &nbsp; #{programa.nombre}
-                p.lead.text-center
-                    span.text-muted &nbsp; Informacion general del estudiante
+                h5.text-center
+                    a(href="/cohorte/#{estudiante.cohorte}").btn.btn-default.btn-xs
+                        i.fa.fa-chevron-circle-left
+                        | &nbsp; Volver a la cohorte
+            .margin-botton
+
 
 
             .col-lg-6
@@ -129,48 +116,81 @@ block content
                     .panel-heading
                         h5
                             i.fa.fa-user
-                            |&nbsp; Datos universitarios del estudiante
+                            |&nbsp; Datos Academicos del estudiante
                     .panel-body
                         .form-horizontal
                             faildset
                                 .form-group
-                                    label(for="nombre", class="col-lg-2 control-label") Fecha de Matricula
+                                    label(for="nombre", class="col-lg-2 control-label") Cohorte
                                     .col-lg-10
-                                        h2.text-primary
-                                            i.fa.fa-calendar
-                                            | &nbsp; #{datofi.fecha_pago.toISOString().slice(0, 10)}
+                                        h4.text-primary #{cohorte.nombre}
                                 .form-group
                                     label(for="nombre", class="col-lg-2 control-label") Codigo
                                     .col-lg-10
                                         p.lead #{estudiante.codigo}
                                 .form-group
-                                    h5.text-center
-                                        a(href="/cohorte/#{estudiante.cohorte}").btn.btn-default.btn-xs
-                                            i.fa.fa-chevron-circle-left
-                                            | &nbsp; Volver a la cohorte
+                                    label(for="nombre", class="col-lg-2 control-label") Modalidad
+                                    .col-lg-10
+                                        h4.label.label-warning.text-size-14 #{estudiante.modalidad}
+
                                 legend
+                                .margin-botton
+                                h4.pull-right
+                                    a(href="/estudiante/proofPayment/#{estudiante.id}").btn.btn-default.btn-xs
+                                        i.fa.fa-plus
+                                        | &nbsp; Registrar Pago
+                                p.lead.text-muted Datos financieros del estudiante
+                                table.table.table-hover.table-striped
+                                    thead
+                                        tr
+                                            th(width="25%"): p.text-center Fecha
+                                            th(width="45%"): p Concepto de pago
+                                            th(width="30%"): P.text-center Valor
+                                    tbody
+                                        each datafinanciera in datafinancieras
+                                            tr
+                                                td(width="25%").text-center
+                                                    span.label.label-info.text-size-10
+                                                        i.fa.fa-calendar
+                                                        | &nbsp; #{datafinanciera.fecha_pago.toISOString().slice(0, 10)}
+                                                td(width="45%")
+                                                    span #{datafinanciera.concepto}
+                                                td(width="30%").text-center
+                                                    strong $ #{datafinanciera.valor}
+
+
+                                .margin-botton
+                                legend
+                                .margin-botton
+                                h4.pull-right
+                                    a(href="/asignatura/#{estudiante.id}/elective").btn.btn-default.btn-xs
+                                        i.fa.fa-plus
+                                        | &nbsp; Matricular Electiva
                                 p.lead.text-muted Materias del estudiante
 
                                 table.table.table-hover.table-striped
                                     thead
                                         tr
-                                            th(width="10%"): p.text-center Nivel
+
                                             th(width="45%"): p Materia
-                                            th(width="30%"): P.text-center Creditos
+                                            th(width="25%"): p.text-center Semestre
+                                            th(width="15%"): P.text-center Creditos
                                             th(width="15%"): p.text-center Nota
                                     tbody
                                         .scroll-list
                                             each  asignatura in asignaturas
                                                 tr
-                                                    td(width="10%"): p.text-center
-                                                        span.label.label-default #{asignatura.nivel}
-                                                    td(width="45%") #{asignatura.nombre}
-                                                    td(width="30%"): p.text-center
-                                                        span.label.label-warning #{asignatura.credito}
+
+                                                    td(width="45%")
+                                                        span.text-primary #{asignatura.nombre}
+                                                    td(width="25%"): p.text-center
+                                                        span #{asignatura.nivel}
+                                                    td(width="15%"): p.text-center
+                                                        span.text-muted #{asignatura.credito}
                                                     td(width="15%")
                                                         -if (asignatura.nota == null){
-                                                            p.text-center -
+                                                            p.text-center: strong -
                                                         -}else{
-                                                            p.text-center #{asignatura.nota}
+                                                            p.text-center: strong #{asignatura.nota}
                                                         -}
 
